chatroom message list done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">JuicyChatComp</string>
+<string name="app_name">JuicyChatComp</string>
+<string name="send_btn">SEND</string>
 </resources>
